# program-thelotux

./: .gitignore  PROJECT_DESCRIPTION.md
anchor_project/: README.md
anchor_project/raffle_platform/: .gitignore  Anchor.toml  show-addresses.js  transfer-sol.js
anchor_project/raffle_platform/programs/raffle_platform/: Cargo.toml
anchor_project/raffle_platform/programs/raffle_platform/src/: lib.rs
anchor_project/raffle_platform/tests/: raffle_platform.ts
frontend/: README.md  TESTING_GUIDE.md  next.config.ts  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: RafflePlatform.tsx  WalletProvider.tsx
frontend/utils/: program.ts  raffleHistory.ts  raffle_platform.json
